Refactor HTML structure and improve game logic

--- a/index.html
+++ b/index.html
@@ -244,22 +244,43 @@
     let isHost = false;
 
     // 🧭 Host creates game
-    document.getElementById("createBtn").onclick = async () => {
-      const word = document.getElementById("wordInput").value.toUpperCase();
-      if (!word.match(/^[A-ZÅÄÖ]+$/)) return alert("Endast bokstäver (A-Ö) tillåtna!");
-      const id = "hangman-" + Math.random().toString(36).substr(2,5);
-      await db.ref("games/" + id).set({
-        word,
-        guesses: [],
-        wrong: 0,
-        over: false,
-        players: { host: "Axwell" },
-        turn: "guest",
-        scores: { host: 0, guest: 0 }
-      });
-      localStorage.setItem("createdGameId", id);
-      window.location.href = `${location.origin}${location.pathname}?game=${id}`;
-    };
+const createBtn = document.getElementById("createBtn");
+
+createBtn.addEventListener("click", async () => {
+  try {
+    const word = document.getElementById("wordInput").value.trim().toUpperCase();
+    if (!word.match(/^[A-ZÅÄÖ]+$/)) {
+      alert("Endast bokstäver (A–Ö) tillåtna!");
+      return;
+    }
+
+    // generate unique id
+    const id = "hangman-" + Math.random().toString(36).substr(2,5);
+
+    // write new game to Firebase
+    await db.ref("games/" + id).set({
+      word,
+      guesses: [],
+      wrong: 0,
+      over: false,
+      players: { host: "Axwell" },
+      turn: "guest",
+      scores: { host: 0, guest: 0 }
+    });
+
+    // store locally for host tracking
+    localStorage.setItem("createdGameId", id);
+
+    // confirm in console for debugging
+    console.log("✅ Game created:", id);
+
+    // redirect to the game link
+    window.location.href = `${location.origin}${location.pathname}?game=${id}`;
+  } catch (err) {
+    console.error("❌ Could not create game:", err);
+    alert("Något gick fel när spelet skulle skapas. Kontrollera Firebase-konfigurationen.");
+  }
+});
 
     // 🎮 Join existing game
     if (gameId) {
@@ -459,6 +480,7 @@ newWordBtn.onclick = async () => {
   </script>
 </body>
 </html>
+
 
 
 
