Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -473,11 +473,11 @@ newWordBtn.onclick = async () => {
 
   // 🟢 Rebuild the alphabet buttons immediately
   createLetterButtons(gameId);
-};
+}; // ✅ closes newWordBtn.onclick
 
-  };
-    
-  </script>
+}; // ✅ closes window.onload
+
+</script>
 </body>
 </html>
 
