--- a/index.html
+++ b/index.html
@@ -7,178 +7,226 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-database-compat.js"></script>
-  <style>
-    :root {
-      --bg1: #0d0d0f;
-      --bg2: #1a1a1f;
-      --panel: rgba(255,255,255,0.05);
-      --accent: #f5a623;
-      --accent2: #f57c00;
-      --text: #ffffff;
-      --text-dim: #bbbbbb;
-    }
+ <style>
+  :root {
+    --bg1: #0d0d0f;
+    --bg2: #1a1a1f;
+    --panel: rgba(255,255,255,0.05);
+    --accent: #f5a623;
+    --accent2: #f57c00;
+    --text: #ffffff;
+    --text-dim: #bbbbbb;
+  }
 
+  /* 🔥 Animated gradient background */
+  body {
+    font-family: "Poppins", sans-serif;
+    background: linear-gradient(-45deg, #0d0d0f, #1a1a1f, #161616, #1a1a1f);
+    background-size: 400% 400%;
+    animation: gradientShift 18s ease infinite;
+    color: var(--text);
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    min-height: 100vh;
+    padding: 40px 20px;
+    overflow-x: hidden;
+  }
+
+  @keyframes gradientShift {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+  }
+
+  #gameContainer {
+    background: var(--panel);
+    backdrop-filter: blur(12px);
+    border-radius: 20px;
+    box-shadow: 0 0 25px rgba(0,0,0,0.6);
+    max-width: 500px;
+    width: 100%;
+    padding: 25px;
+    text-align: center;
+    transition: all 0.3s ease;
+  }
+
+  h1 {
+    font-weight: 600;
+    color: var(--accent);
+    letter-spacing: 1px;
+    margin-bottom: 10px;
+    text-shadow: 0 0 10px rgba(245,166,35,0.6);
+    font-size: 1.8rem;
+  }
+
+  #scoreboard {
+    background: rgba(255,255,255,0.08);
+    border-radius: 12px;
+    padding: 10px;
+    margin-bottom: 15px;
+    font-weight: 600;
+    display: flex;
+    justify-content: space-around;
+    color: var(--accent);
+  }
+
+  #hangman {
+    width: 80%;
+    max-width: 300px;
+    aspect-ratio: 200/250;
+    background: #111;
+    border: 1px solid #333;
+    border-radius: 8px;
+    margin: 10px auto;
+    display: block;
+  }
+
+  #word {
+    font-size: 2rem;
+    letter-spacing: 0.3em;
+    margin: 15px 0;
+    word-break: break-word;
+  }
+
+  #turnIndicator {
+    font-weight: 600;
+    margin-bottom: 10px;
+    transition: all 0.3s ease;
+  }
+
+  #letters {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 6px;
+    margin: 10px 0;
+  }
+
+  #letters button {
+    padding: 0.6rem 0.8rem;
+    font-size: 1.1rem;
+    background: var(--accent);
+    border: none;
+    border-radius: 6px;
+    color: #111;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all 0.2s ease;
+  }
+
+  #letters button:hover:not(:disabled) {
+    background: var(--accent2);
+    transform: translateY(-2px);
+  }
+
+  #letters button:disabled {
+    opacity: 0.3;
+    cursor: default;
+  }
+
+  #message {
+    font-size: 1.2rem;
+    margin: 10px 0;
+    color: var(--accent);
+  }
+
+  #lobby {
+    margin-top: 10px;
+    font-size: 1rem;
+    color: var(--text-dim);
+    line-height: 1.4;
+  }
+
+  #link {
+    color: var(--accent);
+    word-break: break-all;
+    margin-top: 10px;
+  }
+
+  input, button {
+    font-family: "Poppins", sans-serif;
+    border: none;
+    border-radius: 8px;
+    padding: 0.8rem 1rem;
+    font-size: 1rem;
+    margin: 5px;
+    outline: none;
+  }
+
+  #wordInput {
+    width: 70%;
+    background: #222;
+    color: var(--text);
+    border: 1px solid #333;
+  }
+
+  #createBtn, #restartBtn, #newWordBtn {
+    background: var(--accent);
+    color: #111;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+
+  #createBtn:hover, #restartBtn:hover, #newWordBtn:hover {
+    background: var(--accent2);
+    transform: translateY(-2px);
+  }
+
+  #restartBtn, #newWordBtn {
+    display: none;
+    margin-top: 10px;
+  }
+
+  .blink {
+    animation: blink 1.5s infinite;
+  }
+
+  @keyframes blink {
+    0%, 90%, 100% { opacity: 1; }
+    95% { opacity: 0.2; }
+  }
+
+  /* 📱 Mobile optimization */
+  @media (max-width: 600px) {
     body {
-      font-family: "Poppins", sans-serif;
-      background: linear-gradient(160deg, var(--bg1), var(--bg2));
-      color: var(--text);
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      min-height: 100vh;
-      padding: 40px 20px;
+      padding: 20px 10px;
+      align-items: center;
     }
 
     #gameContainer {
-      background: var(--panel);
-      backdrop-filter: blur(10px);
+      padding: 15px;
+      max-width: 90%;
       border-radius: 16px;
-      box-shadow: 0 0 25px rgba(0,0,0,0.5);
-      max-width: 500px;
-      width: 100%;
-      padding: 20px;
-      text-align: center;
     }
 
     h1 {
-      font-weight: 600;
-      color: var(--accent);
-      letter-spacing: 1px;
-      margin-bottom: 10px;
-      text-shadow: 0 0 10px rgba(245,166,35,0.6);
-    }
-
-    #scoreboard {
-      background: rgba(255,255,255,0.08);
-      border-radius: 12px;
-      padding: 10px;
-      margin-bottom: 15px;
-      font-weight: 600;
-      display: flex;
-      justify-content: space-around;
-      color: var(--accent);
-    }
-
-    #hangman {
-      width: 80%;
-      max-width: 300px;
-      aspect-ratio: 200/250;
-      background: #111;
-      border: 1px solid #333;
-      border-radius: 8px;
-      margin: 10px auto;
-      display: block;
+      font-size: 1.5rem;
+      line-height: 1.2;
     }
 
     #word {
-      font-size: 2rem;
-      letter-spacing: 0.3em;
-      margin: 15px 0;
-    }
-
-    #turnIndicator {
-      font-weight: 600;
-      margin-bottom: 10px;
-      transition: all 0.3s ease;
-    }
-
-    #letters {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 6px;
-      margin: 10px 0;
+      font-size: 1.6rem;
+      letter-spacing: 0.25em;
     }
 
     #letters button {
-      padding: 0.6rem 0.8rem;
-      font-size: 1.1rem;
-      background: var(--accent);
-      border: none;
-      border-radius: 6px;
-      color: #111;
-      font-weight: 600;
-      cursor: pointer;
-      transition: all 0.2s ease;
+      font-size: 0.9rem;
+      padding: 0.5rem 0.6rem;
+      flex: 0 0 calc(12.5% - 4px); /* 8 buttons per row */
     }
 
-    #letters button:hover:not(:disabled) {
-      background: var(--accent2);
-      transform: translateY(-2px);
+    #scoreboard {
+      font-size: 0.9rem;
+      padding: 8px;
     }
 
-    #letters button:disabled {
-      opacity: 0.3;
-      cursor: default;
+    #turnIndicator, #message, #lobby {
+      font-size: 0.95rem;
     }
-
-    #message {
-      font-size: 1.2rem;
-      margin: 10px 0;
-      color: var(--accent);
-    }
-
-    #lobby {
-      margin-top: 10px;
-      font-size: 1rem;
-      color: var(--text-dim);
-      line-height: 1.4;
-    }
-
-    #link {
-      color: var(--accent);
-      word-break: break-all;
-      margin-top: 10px;
-    }
-
-    input, button {
-      font-family: "Poppins", sans-serif;
-      border: none;
-      border-radius: 8px;
-      padding: 0.8rem 1rem;
-      font-size: 1rem;
-      margin: 5px;
-      outline: none;
-    }
-
-    #wordInput {
-      width: 70%;
-      background: #222;
-      color: var(--text);
-      border: 1px solid #333;
-    }
-
-    #createBtn, #restartBtn, #newWordBtn {
-      background: var(--accent);
-      color: #111;
-      font-weight: 600;
-      cursor: pointer;
-      transition: all 0.3s ease;
-    }
-
-    #createBtn:hover, #restartBtn:hover, #newWordBtn:hover {
-      background: var(--accent2);
-      transform: translateY(-2px);
-    }
-
-    #restartBtn, #newWordBtn {
-      display: none;
-      margin-top: 10px;
-    }
-
-    .blink {
-      animation: blink 1.5s infinite;
-    }
-
-    @keyframes blink {
-      0%, 90%, 100% { opacity: 1; }
-      95% { opacity: 0.2; }
-    }
-
-    @media (max-width: 600px) {
-      #word { font-size: 7vw; }
-    }
-  </style>
+  }
+</style>
 </head>
 <body>
   <div id="gameContainer">
@@ -483,3 +531,4 @@ newWordBtn.onclick = async () => {
 </script>
 </body>
 </html>
+
