--- a/index.html
+++ b/index.html
@@ -53,6 +53,22 @@
     #scoreboard span.score{display:inline-block; transition:transform .25s ease}
     #youAre{margin-top:4px; font-size:.9rem; opacity:.85; color:var(--text-dim)}
 
+    /* Timer config (host only) */
+    #timerConfig{
+      display:none; align-items:center; justify-content:center; gap:8px;
+      font-weight:600; color:var(--text-dim);
+    }
+    #timerInput{
+      width:70px; padding:.5rem .6rem; border-radius:10px; border:1px solid #333;
+      background:#222; color:#fff; font-weight:700; text-align:center;
+    }
+    .btn{
+      color:#111; cursor:pointer; border:none; border-radius:10px; padding:.6rem .9rem; font-weight:700;
+      background:linear-gradient(135deg,var(--grad-a),var(--grad-b));
+      box-shadow:0 6px 18px rgba(168,85,247,.25);
+    }
+    .btn:hover{ transform: translateY(-2px); }
+
     /* Canvas + word zone */
     #hangZone{display:flex; flex-direction:column; align-items:center; gap:8px; flex:1; min-height:0;}
     #hangman{
@@ -60,6 +76,19 @@
       background:#111; border:1px solid #333; border-radius:10px;
       box-shadow:inset 0 0 15px rgba(0,0,0,.35); display:block;
     }
+
+    /* Timer bar (modern look) */
+    #timerBar{
+      width:100%; max-width:420px; height:8px; border-radius:999px;
+      background:rgba(255,255,255,.08); overflow:hidden; display:none;
+    }
+    #timerFill{
+      height:100%; width:0%;
+      background:linear-gradient(135deg,var(--grad-a),var(--grad-b));
+      box-shadow:0 0 12px rgba(168,85,247,.4);
+      transition:width .2s linear;
+    }
+
     #word{letter-spacing:.25em; word-break:break-word; font-size:clamp(1.2rem,5vw,1.8rem); text-align:center}
 
     /* Turn indicator (gradient text) */
@@ -95,22 +124,20 @@
     #letters button.good{outline:2px solid #22c55e; box-shadow:0 0 0 4px rgba(34,197,94,.25)}
     #letters button.bad{outline:2px solid #ef4444; box-shadow:0 0 0 4px rgba(239,68,68,.25)}
 
-    /* Messages */
+    /* Messages, lobby, link */
     #message{color:var(--text); text-align:center; min-height:1.4em; transition:opacity .35s ease; opacity:.9}
     .fade{opacity:0}
+    #lobby{color:var(--text-dim); line-height:1.3}
+    #link{color:var(--text-dim); word-break:break-all; font-size:clamp(.8rem,3vw,.95rem)}
 
     /* Setup */
     #setup input,#setup button{
       font-family:"Poppins",sans-serif; font-weight:600; border:none; border-radius:10px;
       padding:.9rem 1rem; font-size:clamp(.95rem,3.5vw,1rem); outline:none;
     }
-    #wordInput{width:70%; background:#222; color:var(--text); border:1px solid #333}
+    #wordInput{width:70%; background:#222; color:#fff; border:1px solid #333}
     #createBtn{color:#111; background:linear-gradient(135deg,var(--grad-a),var(--grad-b)); box-shadow:0 6px 18px rgba(236,72,153,.25); cursor:pointer}
     #createBtn:hover{transform:translateY(-2px)}
-
-    /* Footer */
-    #lobby{color:var(--text-dim); line-height:1.3}
-    #link{color:var(--text-dim); word-break:break-all; font-size:clamp(.8rem,3vw,.95rem)}
 
     #restartBtn,#newWordBtn{
       display:none; margin-top:6px; color:#111; cursor:pointer;
@@ -142,8 +169,20 @@
       </div>
       <div id="youAre"></div>
 
+      <!-- Host-only timer config -->
+      <div id="timerConfig">
+        <label for="timerInput">Ställ in tid (0–100s):</label>
+        <input id="timerInput" type="number" min="0" max="100" value="0" />
+        <button id="timerSetBtn" class="btn">✅ Bekräfta</button>
+        <button id="timerToggleBtn" class="btn" style="display:none;">⏸️ Ta bort timer</button>
+      </div>
+
       <div id="hangZone">
         <canvas id="hangman"></canvas>
+
+        <!-- Modern timer bar -->
+        <div id="timerBar"><div id="timerFill"></div></div>
+
         <div id="word">_</div>
       </div>
 
@@ -192,6 +231,12 @@
     const youAreEl = document.getElementById("youAre");
     const canvas = document.getElementById("hangman");
     const ctx = canvas.getContext("2d");
+    const timerBar = document.getElementById("timerBar");
+    const timerFill = document.getElementById("timerFill");
+    const timerConfig = document.getElementById("timerConfig");
+    const timerInput = document.getElementById("timerInput");
+    const timerSetBtn = document.getElementById("timerSetBtn");
+    const timerToggleBtn = document.getElementById("timerToggleBtn");
 
     /* ---------- State ---------- */
     const letters = [..."ABCDEFGHIJKLMNOPQRSTUVWXYZÅÄÖ"];
@@ -205,6 +250,12 @@
     let currentWrong = 0;
     let lastScores = { host: 0, guest: 0 };
     let lastUpdateKey = ""; // de-dupe Firebase events
+
+    // Timer state
+    let timerSeconds = 0;
+    let roundStartMs = 0;
+    let timerRAF = null;
+    let timerEndedThisRound = false;
 
     /* ---------- Layout helpers ---------- */
     function resizeCanvas() {
@@ -265,14 +316,18 @@
           }
 
           const solved = data.word.split("").every(l => newGuesses.includes(l));
-          if (newWrong >= 6 || solved) {
+          if (solved) {
             over = true;
-            if (newWrong < 6) {
-              scores[data.turn] = (scores[data.turn] || 0) + 1;
-            }
+            // winner = guesser
+            scores[data.turn] = (scores[data.turn] || 0) + 1;
+          } else if (newWrong >= 6) {
+            over = true;
+            // loser = guesser → opponent gets +1
+            const opponent = data.turn === "host" ? "guest" : "host";
+            scores[opponent] = (scores[opponent] || 0) + 1;
           }
 
-          // ✅ atomic update to prevent race conditions
+          // ✅ atomic update
           await db.ref("games/" + id).update({
             guesses: newGuesses,
             wrong: newWrong,
@@ -349,6 +404,50 @@
       });
     }
 
+    /* ---------- Timer helpers ---------- */
+    function startTimerLoop() {
+      cancelTimerLoop();
+      if (timerSeconds <= 0 || !roundStartMs) {
+        timerBar.style.display = "none";
+        return;
+      }
+      timerBar.style.display = "block";
+      timerEndedThisRound = false;
+
+      const tick = async () => {
+        const now = Date.now();
+        const elapsed = Math.max(0, now - roundStartMs);
+        const remainMs = Math.max(0, (timerSeconds * 1000) - elapsed);
+        const pct = Math.max(0, Math.min(1, remainMs / (timerSeconds * 1000)));
+        timerFill.style.width = (pct * 100).toFixed(2) + "%";
+
+        // Only host enforces timeout → avoids double-finishes
+        if (remainMs <= 0 && !timerEndedThisRound) {
+          timerEndedThisRound = true;
+          // End round due to timeout
+          const snap = await db.ref("games/" + gameId).get();
+          const data = snap.val();
+          if (data && !data.over) {
+            const opponent = data.turn === "host" ? "guest" : "host";
+            const scores = data.scores || { host: 0, guest: 0 };
+            scores[opponent] = (scores[opponent] || 0) + 1;
+            await db.ref("games/" + gameId).update({
+              over: true,
+              scores
+            });
+            showFadeMessage("⏰ Tiden tog slut!");
+          }
+        }
+        timerRAF = requestAnimationFrame(tick);
+      };
+      timerRAF = requestAnimationFrame(tick);
+    }
+    function cancelTimerLoop() {
+      if (timerRAF) cancelAnimationFrame(timerRAF);
+      timerRAF = null;
+      timerFill.style.width = "0%";
+    }
+
     /* ---------- Create game (host) ---------- */
     document.getElementById("createBtn").onclick = async () => {
       const word = (document.getElementById("wordInput").value || "").trim().toUpperCase();
@@ -357,7 +456,9 @@
       await db.ref("games/" + id).set({
         word, guesses: [], wrong: 0, over: false,
         players: { host: "Axwell" }, turn: "guest",
-        scores: { host: 0, guest: 0 }
+        scores: { host: 0, guest: 0 },
+        settings: { timerSeconds: 0 },
+        roundStartMs: firebase.database.ServerValue.TIMESTAMP
       });
       localStorage.setItem("createdGameId", id);
       window.location.href = `${location.origin}${location.pathname}?game=${id}`;
@@ -390,19 +491,53 @@
         }
 
         setupPresence(gameId, isCreator ? "host" : "guest");
-        document.getElementById("youAre").textContent = `Du är: ${nickname}`;
+        youAreEl.textContent = `Du är: ${nickname}`;
+
+        // Show timer config for host once guest joined & before guesses
+        updateTimerConfigVisibility(data);
 
         lastScores = data.scores || { host: 0, guest: 0 };
         currentWrong = data.wrong || 0;
+        timerSeconds = data.settings?.timerSeconds || 0;
+        roundStartMs = data.roundStartMs || 0;
+
         drawAll(currentWrong);
         showWord(data.word, data.guesses || []);
         createLetterButtons(gameId);
         linkEl.innerHTML = `Dela denna länk: <a href="${location.origin}${location.pathname}?game=${gameId}" target="_blank">${location.origin}${location.pathname}?game=${gameId}</a>`;
 
+        // Host-only: timer set/remove
+        if (isHost) {
+          timerSetBtn.onclick = async () => {
+            const val = Math.max(0, Math.min(100, Number(timerInput.value || 0)));
+            await db.ref("games/" + gameId + "/settings").update({ timerSeconds: val });
+            // also (re)start round time if no guesses yet
+            if (!(data.guesses && data.guesses.length)) {
+              await db.ref("games/" + gameId).update({ roundStartMs: firebase.database.ServerValue.TIMESTAMP });
+            }
+          };
+          timerToggleBtn.onclick = async () => {
+            await db.ref("games/" + gameId + "/settings").update({ timerSeconds: 0 });
+          };
+        }
+
         listenToGame(gameId);
       });
     } else {
       document.getElementById("wordInput").focus();
+    }
+
+    function updateTimerConfigVisibility(data) {
+      const guestJoined = !!(data.players && data.players.guest);
+      const noGuessesYet = !(data.guesses && data.guesses.length);
+      if (isHost && guestJoined && noGuessesYet) {
+        timerConfig.style.display = "flex";
+      } else {
+        timerConfig.style.display = "none";
+      }
+      // Toggle remove button
+      const t = data.settings?.timerSeconds || 0;
+      timerToggleBtn.style.display = isHost && t > 0 ? "inline-block" : "none";
     }
 
     /* ---------- Live listener (de-duped) ---------- */
@@ -412,13 +547,28 @@
         if (!data || !data.word || !Array.isArray(data.guesses)) return;
 
         // de-dupe repeat events
-        const key = JSON.stringify([data.guesses, data.wrong, data.over, data.turn, data.scores]);
+        const key = JSON.stringify([data.guesses, data.wrong, data.over, data.turn, data.scores, data.settings, data.roundStartMs]);
         if (key === lastUpdateKey) return;
         lastUpdateKey = key;
 
+        // Timer settings
+        timerSeconds = data.settings?.timerSeconds || 0;
+        roundStartMs = data.roundStartMs || 0;
+
+        // Show/hide config appropriately
+        updateTimerConfigVisibility(data);
+
+        // Start/stop timer loop based on settings/round state
+        if (data.over || timerSeconds <= 0) {
+          cancelTimerLoop();
+          timerBar.style.display = "none";
+        } else {
+          // Only run the timeout-enforcement on host to avoid double finishes
+          if (isHost) startTimerLoop(); else { timerBar.style.display = timerSeconds>0 ? "block" : "none"; }
+        }
+
         const guesses = data.guesses;
         showWord(data.word, guesses);
-
         currentWrong = Number(data.wrong) || 0;
 
         // scores + pop
@@ -454,6 +604,7 @@
 
         // End-of-round controls
         if (data.over) {
+          cancelTimerLoop();
           msg.textContent = data.wrong >= 6 ? `💀 Du förlorade! Ordet var ${data.word}` : "🎉 Du vann!";
           restartBtn.style.display = "inline-block";
           newWordBtn.style.display = "inline-block";
@@ -473,7 +624,12 @@
     restartBtn.onclick = async () => {
       const snap = await db.ref("games/" + gameId).get();
       const data = snap.val(); if (!data) return;
-      await db.ref("games/" + gameId).update({ guesses: [], wrong: 0, over: false });
+
+      await db.ref("games/" + gameId).update({
+        guesses: [], wrong: 0, over: false,
+        roundStartMs: firebase.database.ServerValue.TIMESTAMP
+      });
+
       currentWrong = 0;
       createLetterButtons(gameId);
       showFadeMessage("🔁 Ny runda!");
@@ -488,14 +644,16 @@
       const nextTurn = data.turn === "host" ? "guest" : "host";
       await db.ref("games/" + gameId).set({
         word: newWord, guesses: [], wrong: 0, over: false,
-        players: data.players, turn: nextTurn, scores: data.scores
+        players: data.players, turn: nextTurn, scores: data.scores,
+        settings: data.settings || { timerSeconds: 0 },
+        roundStartMs: firebase.database.ServerValue.TIMESTAMP
       });
       currentWrong = 0;
       createLetterButtons(gameId);
       showFadeMessage("✍️ Nytt ord valt!");
     };
 
-    // Initial sizing
+    // Initial size
     resizeCanvas();
   };
   </script>
